[package]
name = "dogstatsd"
version = "0.2.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
tokio = { version = "1.7.0", default-features = false, features = ["net"] }

[dev-dependencies]
tokio = { version = "1.7.0", default-features = false, features = ["macros", "rt"] }
